background image not showing fixed

--- a/styles/index.css
+++ b/styles/index.css
@@ -25,7 +25,7 @@ body {
   position: fixed;
   left: 0;
   height: 100%;
-  background: url("/assets/dbrodepattern.png");
+  background: url(assets/dbrodepattern.png);
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
